--- a/index.html
+++ b/index.html
@@ -1131,6 +1131,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/2019-hiller-aeit-regaining/2019-hiller-aeit-regaining.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -1368,7 +1372,7 @@
   <p class="powered-by">
     &copy; 2019 Markus Dahlmanns &middot; 
 
-    Last updated on Tue, 3 Sep 2019 08:25:00 (CEST)
+    Last updated on Fri, 13 Sep 2019 11:39:48 (CEST)
 
     &middot;
     <a href="/about">About this page</a>
