Update IMC Reference to Virtual Event

--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      <em>Proceedings of the Internet Measurement Conference (IMC &lsquo;20), October 27-29, 2020, Pittsburgh, PA, USA</em>
+      <em>Proceedings of the Internet Measurement Conference (IMC &lsquo;20), October 27-29, 2020, Virtual Event, USA</em>
     
   </span>
   
@@ -2062,7 +2062,7 @@
   <p class="powered-by">
     © 2020 Markus Dahlmanns &middot; 
 
-    Last updated on Fri, 2 Oct 2020 15:09:15 (CEST)
+    Last updated on Fri, 2 Oct 2020 15:13:02 (CEST)
 
     &middot;
     <a href="/about">About this page</a>
