--- a/publication/index.html
+++ b/publication/index.html
@@ -851,7 +851,7 @@
   </span>
   (2020).
   <a href="/publication/2020-dahlmanns-imc-opcua/">Easing the Conscience with OPC UA: An Internet-Wide Study on Insecure Deployments</a>.
-  <em>Proceedings of the Internet Measurement Conference (IMC &lsquo;20), October 27-29, 2020, Pittsburgh, PA, USA</em>.
+  <em>Proceedings of the Internet Measurement Conference (IMC &lsquo;20), October 27-29, 2020, Virtual Event, USA</em>.
   
   <p>
 
@@ -1250,7 +1250,7 @@
   <p class="powered-by">
     © 2020 Markus Dahlmanns &middot; 
 
-    Last updated on Fri, 2 Oct 2020 15:09:15 (CEST)
+    Last updated on Fri, 2 Oct 2020 15:13:02 (CEST)
 
     &middot;
     <a href="/about">About this page</a>
