--- a/about/index.html
+++ b/about/index.html
@@ -711,7 +711,7 @@ Hence, the usage of cookies by Github and Cloudflare is outside of my control.</
   <p class="powered-by">
     © 2021 Markus Dahlmanns &middot; 
 
-    Last updated on Tue, 23 Feb 2021 11:18:33 (CET)
+    Last updated on Mon, 17 May 2021 12:32:58 (CEST)
 
     &middot;
     <a href="/about">About this page</a>
