Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,8 @@
   
     
   
-  <meta name="description" content="This page is powered by Wowchemy for Hugo. Furthermore, it is hosted on Github Pages and delivered by Cloudflare. Hence, the usage of cookies by Github and Cloudflare is outside of my control." />
+  <meta name="description" content="This page is powered by Wowchemy for Hugo. It makes use of the Montserrat, Roboto, and Roboto Mono fonts provided on Google Fonts.
+Furthermore, it is hosted on GitHub Pages and delivered by Cloudflare." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://mdahlmanns.de/about/" />
@@ -296,7 +297,8 @@
   <meta property="og:site_name" content="Markus Dahlmanns" />
   <meta property="og:url" content="https://mdahlmanns.de/about/" />
   <meta property="og:title" content="About | Markus Dahlmanns" />
-  <meta property="og:description" content="This page is powered by Wowchemy for Hugo. Furthermore, it is hosted on Github Pages and delivered by Cloudflare. Hence, the usage of cookies by Github and Cloudflare is outside of my control." /><meta property="og:image" content="https://mdahlmanns.de/media/icon_huc519a01561eda02056d3a1574804194d_16622_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="This page is powered by Wowchemy for Hugo. It makes use of the Montserrat, Roboto, and Roboto Mono fonts provided on Google Fonts.
+Furthermore, it is hosted on GitHub Pages and delivered by Cloudflare." /><meta property="og:image" content="https://mdahlmanns.de/media/icon_huc519a01561eda02056d3a1574804194d_16622_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://mdahlmanns.de/media/icon_huc519a01561eda02056d3a1574804194d_16622_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -695,8 +697,9 @@
 
     <div class="article-style">
       <p>This page is powered by <a href="https://wowchemy.com/" target="_blank" rel="noopener">Wowchemy</a> for <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>.
-Furthermore, it is hosted on <a href="https://pages.github.com/" target="_blank" rel="noopener">Github Pages</a> and delivered by <a href="https://www.cloudflare.com/" target="_blank" rel="noopener">Cloudflare</a>.
-Hence, the usage of cookies by Github and Cloudflare is outside of my control.</p>
+It makes use of the <a href="https://fonts.google.com/specimen/Montserrat" target="_blank" rel="noopener">Montserrat</a>, <a href="https://fonts.google.com/specimen/Roboto" target="_blank" rel="noopener">Roboto</a>, and <a href="https://fonts.google.com/specimen/Roboto&#43;Mono" target="_blank" rel="noopener">Roboto Mono</a> fonts provided on <a href="https://fonts.google.com/" target="_blank" rel="noopener">Google Fonts</a>.</p>
+<p>Furthermore, it is hosted on <a href="https://pages.github.com/" target="_blank" rel="noopener">GitHub Pages</a> and delivered by <a href="https://www.cloudflare.com/" target="_blank" rel="noopener">Cloudflare</a>.
+Hence, the potential usage of cookies by <a href="https://github.com" target="_blank" rel="noopener">GitHub</a> and <a href="https://cloudflare.com" target="_blank" rel="noopener">Cloudflare</a> is outside my control.</p>
 
     </div>
 
@@ -741,7 +744,7 @@ Hence, the usage of cookies by Github and Cloudflare is outside of my control.</
   <p class="powered-by">
     © 2022 Markus Dahlmanns &middot; 
 
-    Last updated on Fri, 11 Feb 2022 19:21:35 (CET)
+    Last updated on Sun, 13 Feb 2022 09:54:16 (CET)
 
     &middot;
     <a href="/about">About this page</a>
