--- a/index.html
+++ b/index.html
@@ -2171,7 +2171,7 @@
       Guosong Lin</span>
   </span>
   (2023).
-  <a href="/publication/2023-lorz-cired/">Interconnected Grid Protection Systems &amp;ndash; Reference Grid For Testing An Adaptive Protection Scheme</a>.
+  <a href="/publication/2023-lorz-cired/">Interconnected Grid Protection Systems - Reference Grid For Testing An Adaptive Protection Scheme</a>.
   <em>Proceedings of the International Conference &amp; Exhibition on Electricity Distribution (CIRED) 2023</em>.
   
   <p>
@@ -3254,7 +3254,7 @@
   <p class="powered-by">
     © 2023 Markus Dahlmanns &middot; 
 
-    Last updated on Fri, 12 May 2023 14:24:38 (CEST)
+    Last updated on Fri, 12 May 2023 14:42:01 (CEST)
 
     &middot;
     <a href="/about">About this page</a>
