--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -842,7 +842,7 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/publication/2023-lorz-cired/" >Interconnected Grid Protection Systems &amp;ndash; Reference Grid For Testing An Adaptive Protection Scheme</a>
+      <a href="/publication/2023-lorz-cired/" >Interconnected Grid Protection Systems - Reference Grid For Testing An Adaptive Protection Scheme</a>
     </div>
 
     
@@ -1828,7 +1828,7 @@
   <p class="powered-by">
     © 2023 Markus Dahlmanns &middot; 
 
-    Last updated on Fri, 12 May 2023 14:24:38 (CEST)
+    Last updated on Fri, 12 May 2023 14:42:01 (CEST)
 
     &middot;
     <a href="/about">About this page</a>
