--- a/talk/missed-opportunities-measuring-the-untapped-tls-support-in-the-industrial-internet-of-things/index.html
+++ b/talk/missed-opportunities-measuring-the-untapped-tls-support-in-the-industrial-internet-of-things/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: May 12, 2023 --><html lang="en-us" >
+<!-- Last Published: June 30, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -347,7 +347,7 @@
   
   "location": {
     "@type": "Place",
-    "name": "ACM AASIACCS 2022"
+    "name": "ACM ASIACCS 2022"
   },
   
   
@@ -822,7 +822,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Location</div>
-          <div class="col-12 col-md-9">ACM AASIACCS 2022</div>
+          <div class="col-12 col-md-9">ACM ASIACCS 2022</div>
           
         </div>
       </div>
@@ -1151,7 +1151,7 @@
   <p class="powered-by">
     © 2023 Markus Dahlmanns &middot; 
 
-    Last updated on Fri, 12 May 2023 14:42:01 (CEST)
+    Last updated on Fri, 30 Jun 2023 11:42:04 (CEST)
 
     &middot;
     <a href="/about">About this page</a>
